Extended inventory size for Ultimate Loot Fabricator. 16 -> 36 Update version